holos/deploy/clusters/k3d-holos/components/webhook-receiver/deployment-webhook-receiver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: webhook-receiver
  name: webhook-receiver
  namespace: webhook-receiver
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: webhook-receiver
  template:
    metadata:
      labels:
        app.kubernetes.io/name: webhook-receiver
    spec:
      automountServiceAccountToken: false
      containers:
      - args:
        - webhook-receiver
        image: quay.holos.localhost/holos/holos-paas:dev
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
        name: webhook-receiver
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8080
        resources:
          limits:
            memory: 64Mi
          requests:
            cpu: 10m
            memory: 32Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
      securityContext:
        runAsGroup: 65532
        runAsNonRoot: true
        runAsUser: 65532
        seccompProfile:
          type: RuntimeDefault
