holos/deploy/clusters/k3d-holos/components/webhook-receiver/service-webhook-receiver.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: webhook-receiver
  name: webhook-receiver
  namespace: webhook-receiver
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: webhook-receiver
